# dj3k

./: .env  .pre-commit-config.yaml  docker-compose.yml  manage.py  pyproject.toml
app/: wsgi.py
app/config/: base.py
